# tablator

./: .gitignore  LICENSE  README.md  TODO  addm.conf  addt.conf  hm.conf  ma.conf  pfc.conf  pfe.conf  setup.cfg  tablator.1  tablator.1.md
data/: colors.json  example-columns-table-2.json  example-columns-table-3.json  example-columns-table.json  example-items-1.json  example-items-2.json  example-items-3.json  example-items.json  example-rows-1.json  example-rows-2.json  example-rows-3.json  example-rows.json  example-table-list.json  example-tables.json  hats.json  headwear.json  item-table-1.csv  item-table-2.csv  item-table-3.csv  item-table-4.csv  lines.txt  lines2.csv  lines3.csv  lines4.csv  quantity.json  two-color-things.json  two-colors.json
jsonschema/: tablator.jsonschema
src/: tablator.py
src/tablator/: __init__.py  data.py  logger.py  table.py
tests/: run.sh  someday_test_tablator.py  table-j.json  table-y.yaml  test_data.py  test_logger.py  test_table.py
tools/: items-from-csv.py  print-tables.sh  roll-tables.sh  rows-from-csv.py  tablator  text-to-table.py
