[metadata]
name = tablator
version = 1.0.0
author = Gene
author_email = gene@crithead.com
description = A lookup table library
long_description = See https://github.com/crithead/tablator/blob/master/README.md
url = https://github.com/crithead/tablator
project_urls =
    Bug Tracker = https://github.com/crithead/tablator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
